Tutorial-GiRaFFE_NRPy-Stilde-flux: Fixed some minor bugs in the new characteristic speed calculation.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb
@@ -293,24 +293,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Memory_Read = \"\"\n",
-    "# Read in all the inputs:\n",
-    "for var in [\"GAMMA_FACEDD00\", \"GAMMA_FACEDD01\", \"GAMMA_FACEDD02\",\n",
-    "            \"GAMMA_FACEDD11\", \"GAMMA_FACEDD12\", \"GAMMA_FACEDD22\",\n",
-    "            \"BETA_FACEU0\", \"BETA_FACEU1\", \"BETA_FACEU2\",\"ALPHA_FACE\",\n",
-    "            \"B_RU0\",\"B_RU1\",\"B_RU2\",\"B_LU0\",\"B_LU1\",\"B_LU2\",\n",
-    "            \"VALENCIAV_RU0\",\"VALENCIAV_RU1\",\"VALENCIAV_RU2\",\n",
-    "            \"VALENCIAV_LU0\",\"VALENCIAV_LU1\",\"VALENCIAV_LU2\"]:\n",
-    "    lhsvar = var.lower().replace(\"dd\",\"DD\").replace(\"u\",\"U\").replace(\"b_\",\"B_\").replace(\"valencia\",\"Valencia\")\n",
-    "    # e.g.,\n",
-    "    # const REAL gammaDD00dD0 = auxevol_gfs[IDX4S(GAMMA_FACEDD00GF,i0,i1,i2)];\n",
-    "    Memory_Read += \"const REAL \"+lhsvar+\" = auxevol_gfs[IDX4S(\"+var+\"GF,i0,i1,i2)];\\n\"\n",
-    "\n",
-    "# Storage for the outputs:\n",
-    "for var in [\"Stilde_fluxD0\",\"Stilde_fluxD1\",\"Stilde_fluxD2\"]:\n",
-    "    # e.g.,\n",
-    "    # REAL Stilde_fluxD0 = 0;\n",
-    "    Memory_Read += \"REAL \"+var+\" = 0;\\n\"\n",
+    "def write_C_Code_to_read_memory(write_cmax_cmin=False):\n",
+    "    Memory_Read = \"\"\n",
+    "    # Read in all the inputs:\n",
+    "    for var in [\"GAMMA_FACEDD00\", \"GAMMA_FACEDD01\", \"GAMMA_FACEDD02\",\n",
+    "                \"GAMMA_FACEDD11\", \"GAMMA_FACEDD12\", \"GAMMA_FACEDD22\",\n",
+    "                \"BETA_FACEU0\", \"BETA_FACEU1\", \"BETA_FACEU2\",\"ALPHA_FACE\",\n",
+    "                \"B_RU0\",\"B_RU1\",\"B_RU2\",\"B_LU0\",\"B_LU1\",\"B_LU2\",\n",
+    "                \"VALENCIAV_RU0\",\"VALENCIAV_RU1\",\"VALENCIAV_RU2\",\n",
+    "                \"VALENCIAV_LU0\",\"VALENCIAV_LU1\",\"VALENCIAV_LU2\"]:\n",
+    "        lhsvar = var.lower().replace(\"dd\",\"DD\").replace(\"u\",\"U\").replace(\"b_\",\"B_\").replace(\"valencia\",\"Valencia\")\n",
+    "        # e.g.,\n",
+    "        # const REAL gammaDD00dD0 = auxevol_gfs[IDX4S(GAMMA_FACEDD00GF,i0,i1,i2)];\n",
+    "        Memory_Read += \"const REAL \"+lhsvar+\" = auxevol_gfs[IDX4S(\"+var+\"GF,i0,i1,i2)];\\n\"\n",
+    "    # Storage for the outputs:\n",
+    "    for var in [\"Stilde_fluxD0\",\"Stilde_fluxD1\",\"Stilde_fluxD2\"]:\n",
+    "        # e.g.,\n",
+    "        # REAL Stilde_fluxD0 = 0;\n",
+    "        Memory_Read += \"REAL \"+var+\" = 0;\\n\"\n",
+    "    if write_cmax_cmin:\n",
+    "        # In the staggered case, we will also want to output cmax and cmin:\n",
+    "        for var in [\"cmax\",\"cmin\"]:\n",
+    "            Memory_Read += \"REAL \"+var+\" = 0;\\n\"\n",
+    "    return Memory_Read\n",
     "\n",
     "# This quick function returns a nearby point for memory access. We need this because derivatives are not local operations.\n",
     "def idxm1(dirn):\n",
@@ -321,18 +326,25 @@
     "    if dirn==2:\n",
     "        return \"i0, i1, i2-1\"\n",
     "\n",
-    "# Write the outputs:\n",
-    "Memory_Write = []\n",
-    "for dirn in range(3):\n",
-    "    for comp in range(3):\n",
-    "        Memory_Write.append(\"\")\n",
-    "        # e.g.,\n",
-    "        # rhs_gfs[IDX4S(STILDED0GF, i0, i1, i2)] += invdx0*Stilde_fluxD0;\n",
-    "        # (Note that the invdx0 gets substituted separately! It shouldn't necessarily match Stilde!)\n",
-    "        Memory_Write[dirn] += \"rhs_gfs[IDX4S(STILDED\"+str(comp)+\"GF, i0, i1, i2)] += invdx\"+str(dirn)+\"*Stilde_fluxD\"+str(comp)+\";\\n\"\n",
-    "        # e.g.,\n",
-    "        # rhs_gfs[IDX4S(STILDED0GF, i0-1, i1, i2)] -= invdx0*Stilde_fluxD0;\n",
-    "        Memory_Write[dirn] += \"rhs_gfs[IDX4S(STILDED\"+str(comp)+\"GF, \"+idxm1(dirn)+\")] -= invdx\"+str(dirn)+\"*Stilde_fluxD\"+str(comp)+\";\\n\"\n",
+    "def write_C_code_to_write_results(write_cmax_cmin=False):\n",
+    "    # Write the outputs:\n",
+    "    Memory_Write = []\n",
+    "    for dirn in range(3):\n",
+    "        for comp in range(3):\n",
+    "            Memory_Write.append(\"\")\n",
+    "            # e.g.,\n",
+    "            # rhs_gfs[IDX4S(STILDED0GF, i0, i1, i2)] += invdx0*Stilde_fluxD0;\n",
+    "            # (Note that the invdx0 gets substituted separately! It shouldn't necessarily match Stilde!)\n",
+    "            Memory_Write[dirn] += \"rhs_gfs[IDX4S(STILDED\"+str(comp)+\"GF, i0, i1, i2)] += invdx\"+str(dirn)+\"*Stilde_fluxD\"+str(comp)+\";\\n\"\n",
+    "            # e.g.,\n",
+    "            # rhs_gfs[IDX4S(STILDED0GF, i0-1, i1, i2)] -= invdx0*Stilde_fluxD0;\n",
+    "            Memory_Write[dirn] += \"rhs_gfs[IDX4S(STILDED\"+str(comp)+\"GF, \"+idxm1(dirn)+\")] -= invdx\"+str(dirn)+\"*Stilde_fluxD\"+str(comp)+\";\\n\"\n",
+    "    if write_cmax_cmin:\n",
+    "        name_suffixes = [\"_X\",\"_Y\",\"_Z\"]\n",
+    "        for dirn in range(3):\n",
+    "            for var in [\"cmax\",\"cmin\"]:\n",
+    "                Memory_Write[dirn] += \"auxevol_gfs[IDX4S(\"+var.upper()+name_suffixes[dirn]+\"GF, i0, i1, i2)] = cmax;\\n\"\n",
+    "    return Memory_Write\n",
     "\n",
     "def generate_C_code_for_Stilde_flux(out_dir,inputs_provided = False, alpha_face=None, gamma_faceDD=None, beta_faceU=None,\n",
     "                                    Valenciav_rU=None, B_rU=None, Valenciav_lU=None, B_lU=None, sqrt4pi=None,\n",
@@ -352,21 +364,12 @@
     "        B_lU = ixp.register_gridfunctions_for_single_rank1(\"AUXEVOL\",\"B_lU\",DIM=3)\n",
     "        sqrt4pi = par.Cparameters(\"REAL\",thismodule,\"sqrt4pi\",\"sqrt(4.0*M_PI)\")\n",
     "\n",
-    "    global Memory_Read, Memory_Write # This is to satisfy Python's scoping rules to allow us to\n",
-    "                                     # conditionally modify these global values inside the function.\n",
+    "    Memory_Read = write_C_Code_to_read_memory()\n",
+    "    Memory_Write = write_C_code_to_write_results()\n",
     "    if write_cmax_cmin:\n",
     "        # In the staggered case, we will also want to output cmax and cmin\n",
     "        # If we want to write cmax and cmin, we will need to be able to change auxevol_gfs:\n",
     "        input_params_for_Stilde_flux = \"const paramstruct *params,REAL *auxevol_gfs,REAL *rhs_gfs\"\n",
-    "        # In the staggered case, we will also want to output cmax and cmin:\n",
-    "        for var in [\"cmax\",\"cmin\"]:\n",
-    "            Memory_Read += \"REAL \"+var+\" = 0;\\n\"\n",
-    "        # Then we will write them to gridfunctions determined by the direction in which we interpolated:\n",
-    "        name_suffixes = [\"_X\",\"_Y\",\"_Z\"]\n",
-    "        for dirn in range(3):\n",
-    "            for var in [\"cmax\",\"cmin\"]:\n",
-    "                Memory_Write[dirn] += \"auxevol_gfs[IDX4S(CMAX\"+name_suffixes[dirn]+\"GF, i0, i1, i2)] = cmax;\\n\"\n",
-    "                Memory_Write[dirn] += \"auxevol_gfs[IDX4S(CMIN\"+name_suffixes[dirn]+\"GF, i0, i1, i2)] = cmin;\\n\"\n",
     "    else:\n",
     "        input_params_for_Stilde_flux = \"const paramstruct *params,const REAL *auxevol_gfs,REAL *rhs_gfs\"\n",
     "\n",
@@ -638,21 +641,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pdflatex: security risk: running with elevated privileges\n",
-      "pdflatex: security risk: running with elevated privileges\n",
-      "pdflatex: security risk: running with elevated privileges\n",
-      "Created Tutorial-GiRaFFE_NRPy-Stilde-flux.tex, and compiled LaTeX file to\n",
-      "    PDF file Tutorial-GiRaFFE_NRPy-Stilde-flux.pdf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-GiRaFFE_NRPy-Stilde-flux\",location_of_template_file=os.path.join(\"..\"))"
