--- a/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver_staggered.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver_staggered.ipynb
@@ -1252,46 +1252,21 @@
       "Checking file RHSs/calculate_StildeD2_source_term.h\n",
       "No difference. TEST PASSED!\n",
       "Checking file RHSs/calculate_Stilde_flux_D0.h\n",
-      "--- GiRaFFE_validation_Ccodes\\RHSs/calculate_Stilde_flux_D0.h\n",
-      "+++ GiRaFFE_standalone_Ccodes\\RHSs/calculate_Stilde_flux_D0.h\n",
-      "@@ -33,8 +33,6 @@\n",
-      "                 REAL Stilde_fluxD0 = 0;\n",
-      "                 REAL Stilde_fluxD1 = 0;\n",
-      "                 REAL Stilde_fluxD2 = 0;\n",
-      "-                REAL cmax = 0;\n",
-      "-                REAL cmin = 0;\n",
-      "                 REAL cmax = 0;\n",
-      "                 REAL cmin = 0;\n",
-      "                 {\n",
-      "@@ -175,10 +173,6 @@\n",
-      "                 auxevol_gfs[IDX4S(CMIN_XGF, i0, i1, i2)] = cmin;\n",
-      "                 auxevol_gfs[IDX4S(CMAX_XGF, i0, i1, i2)] = cmax;\n",
-      "                 auxevol_gfs[IDX4S(CMIN_XGF, i0, i1, i2)] = cmin;\n",
-      "-                auxevol_gfs[IDX4S(CMAX_XGF, i0, i1, i2)] = cmax;\n",
-      "-                auxevol_gfs[IDX4S(CMIN_XGF, i0, i1, i2)] = cmin;\n",
-      "-                auxevol_gfs[IDX4S(CMAX_XGF, i0, i1, i2)] = cmax;\n",
-      "-                auxevol_gfs[IDX4S(CMIN_XGF, i0, i1, i2)] = cmin;\n",
-      "                 \n",
-      "             } // END LOOP: for (int i0 = NGHOSTS; i0 < NGHOSTS+Nxx0+1; i0++)\n",
-      "         } // END LOOP: for (int i1 = NGHOSTS; i1 < NGHOSTS+Nxx1+1; i1++)\n",
-      "ERROR: Disagreement found with .py file. See differences above.\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "1",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\patrick\\appdata\\local\\programs\\python\\python38-32\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3327: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+      "No difference. TEST PASSED!\n",
+      "Checking file RHSs/calculate_Stilde_flux_D1.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file RHSs/calculate_Stilde_flux_D2.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file A2B/compute_B_and_Bstagger_from_A.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file boundary_conditions/GiRaFFE_boundary_conditions.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file A2B/compute_B_and_Bstagger_from_A.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file C2P/GiRaFFE_NRPy_cons_to_prims.h\n",
+      "No difference. TEST PASSED!\n",
+      "Checking file C2P/GiRaFFE_NRPy_prims_to_cons.h\n",
+      "No difference. TEST PASSED!\n"
      ]
     }
    ],
