Tutorial-GiRaFFE_NRPy-Stilde-flux: Fixed a bug introduced with the last fix.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb
@@ -343,7 +343,7 @@
     "        name_suffixes = [\"_X\",\"_Y\",\"_Z\"]\n",
     "        for dirn in range(3):\n",
     "            for var in [\"cmax\",\"cmin\"]:\n",
-    "                Memory_Write[dirn] += \"auxevol_gfs[IDX4S(\"+var.upper()+name_suffixes[dirn]+\"GF, i0, i1, i2)] = cmax;\\n\"\n",
+    "                Memory_Write[dirn] += \"auxevol_gfs[IDX4S(\"+var.upper()+name_suffixes[dirn]+\"GF, i0, i1, i2)] = \"+var+\";\\n\"\n",
     "    return Memory_Write\n",
     "\n",
     "def generate_C_code_for_Stilde_flux(out_dir,inputs_provided = False, alpha_face=None, gamma_faceDD=None, beta_faceU=None,\n",
@@ -529,11 +529,44 @@
      "text": [
       "Printing difference between original C code and this code...\n",
       "Checking file calculate_Stilde_flux_D0.h\n",
-      "No difference. TEST PASSED!\n",
-      "Checking file calculate_Stilde_flux_D1.h\n",
-      "No difference. TEST PASSED!\n",
-      "Checking file calculate_Stilde_flux_D2.h\n",
-      "No difference. TEST PASSED!\n"
+      "--- GiRaFFE_Ccodes_validation\\calculate_Stilde_flux_D0.h\n",
+      "+++ GiRaFFE_standalone_Ccodes\\calculate_Stilde_flux_D0.h\n",
+      "@@ -33,8 +33,6 @@\n",
+      "                 REAL Stilde_fluxD0 = 0;\n",
+      "                 REAL Stilde_fluxD1 = 0;\n",
+      "                 REAL Stilde_fluxD2 = 0;\n",
+      "-                REAL cmax = 0;\n",
+      "-                REAL cmin = 0;\n",
+      "                 {\n",
+      "                    const double tmp_1 = ((alpha_face)*(alpha_face));\n",
+      "                    const double tmp_2 = (1.0/(tmp_1));\n",
+      "@@ -169,8 +167,6 @@\n",
+      "                 rhs_gfs[IDX4S(STILDED1GF, i0-1, i1, i2)] -= invdx0*Stilde_fluxD1;\n",
+      "                 rhs_gfs[IDX4S(STILDED2GF, i0, i1, i2)] += invdx0*Stilde_fluxD2;\n",
+      "                 rhs_gfs[IDX4S(STILDED2GF, i0-1, i1, i2)] -= invdx0*Stilde_fluxD2;\n",
+      "-                auxevol_gfs[IDX4S(CMAX_XGF, i0, i1, i2)] = cmax;\n",
+      "-                auxevol_gfs[IDX4S(CMIN_XGF, i0, i1, i2)] = cmin;\n",
+      "                 \n",
+      "             } // END LOOP: for (int i0 = NGHOSTS; i0 < NGHOSTS+Nxx0+1; i0++)\n",
+      "         } // END LOOP: for (int i1 = NGHOSTS; i1 < NGHOSTS+Nxx1+1; i1++)\n",
+      "ERROR: Disagreement found with .py file. See differences above.\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\patrick\\appdata\\local\\programs\\python\\python38-32\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3327: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
