--- a/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver_staggered.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver_staggered.ipynb
@@ -1325,9 +1325,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pdflatex: security risk: running with elevated privileges\n",
+      "pdflatex: security risk: running with elevated privileges\n",
+      "pdflatex: security risk: running with elevated privileges\n",
+      "Created Tutorial-GiRaFFE_NRPy_Main_Driver.tex, and compiled LaTeX file to\n",
+      "    PDF file Tutorial-GiRaFFE_NRPy_Main_Driver.pdf\n"
+     ]
+    }
+   ],
    "source": [
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-GiRaFFE_NRPy_Main_Driver\")"
