latex_parser.py: continued improvement of tensor structure (covdrv)
- removed namespace attribute from Parser (only class attribute)
- removed static continue_parsing method and added class attribute
- improved modularity of _summation and fixed derivative indexing
- added 'verbose' mode to parse function (Tensor class __str__)

--- a/Tutorial-LaTeX_Parser_Interface.ipynb
+++ b/Tutorial-LaTeX_Parser_Interface.ipynb
@@ -77,8 +77,6 @@
    "outputs": [],
    "source": [
     "from latex_parser import *\n",
-    "Parser.continue_parsing(False)\n",
-    "Parser.ignore_override()\n",
     "import sympy as sp"
    ]
   },
@@ -247,6 +245,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Parser.ignore_override(); Parser.continue_parsing = False"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -276,30 +283,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('hUD', 'h')"
+       "{Scalar(h), Tensor(hUD, 4D)}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "parse(r\"\"\"\n",
-    "    % define nosym hUD (4);\n",
+    "    % define nosym hUD (4D);\n",
     "    h = h^\\mu{}_\\mu\n",
-    "\"\"\")"
+    "\"\"\", verbose=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -326,30 +333,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('gDD', 'gdet', 'gUU', 'vD', 'vU')"
+       "{'gDD', 'gUU', 'gdet', 'vD', 'vU'}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "parse(r\"\"\"\n",
-    "    % define metric gUU (3), vD (3);\n",
+    "    % define metric gUU (3D), vD (3D);\n",
     "    v^\\mu = g^{\\mu\\nu} v_\\nu\n",
     "\"\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -376,31 +383,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('epsilonDDD', 'vU', 'wU', 'uD')"
+       "{'epsilonDDD', 'uD', 'vU', 'wU'}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "parse(r\"\"\"\n",
-    "    % define permutation epsilonDDD (3);\n",
-    "    % define vU (3), wU (3);\n",
+    "    % define permutation epsilonDDD (3D);\n",
+    "    % define vU (3D), wU (3D);\n",
     "    u_i = \\epsilon_{ijk} v^j w^k\n",
     "\"\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -441,20 +448,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('FUU', 'k', 'FUU_dD', 'gDD', 'gdet', 'gUU', 'gDD_dD', 'GammaUDD', 'FUU_cdD', 'JU')\n"
+      "{'gDD_dD', 'FUU_dD', 'gdet', 'gDD', 'k', 'gUU', 'GammaUDD', 'JU', 'FUU', 'FUU_cdD'}\n"
      ]
     }
    ],
    "source": [
     "print(parse(r\"\"\"\n",
-    "    % define anti01 FUU (4), const k;\n",
+    "    % define anti01 FUU (4D), metric gDD (4D), const k;\n",
     "    J^\\mu = (4\\pi k)^{-1} \\vphantom{_d} \\nabla_\\nu F^{\\mu\\nu}\n",
     "\"\"\"))"
    ]
@@ -471,20 +478,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('FUU', 'k', 'FUU_dD', 'ghatDD', 'ghatdet', 'ghatUU', 'ghatDD_dD', 'GammahatUDD', 'FUU_cdhatD', 'JU')\n"
+      "{'ghatdet', 'FUU_dD', 'ghatDD_dD', 'GammahatUDD', 'FUU_cdhatD', 'k', 'ghatUU', 'ghatDD', 'JU', 'FUU'}\n"
      ]
     }
    ],
    "source": [
     "print(parse(r\"\"\"\n",
-    "    % define anti01 FUU (4), const k;\n",
+    "    % define anti01 FUU (4D), metric ghatDD (4D), const k;\n",
     "    J^\\mu = (4\\pi k)^{-1} \\vphantom{_d} \\hat{\\nabla}_\\nu F^{\\mu\\nu}\n",
     "\"\"\"))"
    ]
@@ -496,7 +503,7 @@
     "#### Example 5. [Schwarzschild Metric](https://en.wikipedia.org/wiki/Schwarzschild_metric) (Numeric Indexing)\n",
     "LaTeX Source | Rendered LaTeX\n",
     ":----------- | :-------------\n",
-    "<pre><code>% define basis [t, r, \\theta, \\phi];<br>% define metric gDD (4), kronecker deltaDD (4);<br>% define const G, const M;<br>% parse g_{\\mu\\nu} = \\delta_{\\mu\\nu};<br>&#92;begin{align}<br>&emsp;&emsp;&emsp;g_{0 0} &= -\\left(1 - \\frac{2GM}{r}\\right) &#92;&#92;<br>&emsp;&emsp;&emsp;g_{1 1} &=  \\left(1 - \\frac{2GM}{r}\\right)^{-1} &#92;&#92;<br>&emsp;&emsp;&emsp;g_{2 2} &= r^{{2}} &#92;&#92;<br>&emsp;&emsp;&emsp;g_{3 3} &= r^{{2}} \\sin^2\\theta<br>&#92;end{align}<br>% update metric gDD;|$$\n",
+    "<pre><code>% define basis [t, r, \\theta, \\phi];<br>% define metric gDD (4), kronecker deltaDD (4);<br>% define const G, const M;<br>% parse g_{\\mu\\nu} = \\delta_{\\mu\\nu};<br>&#92;begin{align}<br>&emsp;&emsp;&emsp;g_{0 0} &= -\\left(1 - \\frac{2GM}{r}\\right) &#92;&#92;<br>&emsp;&emsp;&emsp;g_{1 1} &=  \\left(1 - \\frac{2GM}{r}\\right)^{-1} &#92;&#92;<br>&emsp;&emsp;&emsp;g_{2 2} &= r^{{2}} &#92;&#92;<br>&emsp;&emsp;&emsp;g_{3 3} &= r^{{2}} \\sin^2\\theta<br>&#92;end{align}<br>% assign metric gDD;|$$\n",
     "% define basis [t, r, \\theta, \\phi];\n",
     "% define metric gDD (4), kronecker deltaDD (4);\n",
     "% define const G, const M;\n",
@@ -507,20 +514,18 @@
     "    g_{2 2} &= r^{{2}} \\\\\n",
     "    g_{3 3} &= r^{{2}} \\sin^2\\theta\n",
     "\\end{align}\n",
-    "% update metric gDD;\n",
+    "% assign metric gDD;\n",
     "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from latex_parser import *\n",
-    "import sympy as sp\n",
     "parse(r\"\"\"\n",
-    "    % define kronecker deltaDD (4);\n",
+    "    % define kronecker deltaDD (4D);\n",
     "    % define const G, const M;\n",
     "    % parse g_{\\mu\\nu} = \\delta_{\\mu\\nu};\n",
     "    \\begin{align}\n",
@@ -530,12 +535,13 @@
     "        g_{3 3} &= r^{{2}} \\sin^2\\theta\n",
     "    \\end{align}\n",
     "    % assign metric gDD\n",
-    "\"\"\");"
+    "\"\"\");\n",
+    "Parser.continue_parsing = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -581,11 +587,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Parser.continue_parsing(True)\n",
     "parse(r\"\"\"\n",
     "    % define basis [t, r, \\theta, \\phi];\n",
     "    \\begin{align}\n",
@@ -602,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -764,22 +769,6 @@
    ],
    "source": [
     "display(sp.simplify(sp.Matrix(GDD)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The static variable `namespace` for the `Parser` class will provide access to the global namespace of the parser across each instance of the class."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Parser.namespace # uncomment and run cell"
    ]
   },
   {
