--- a/NRPyPN/PN-MOmega.ipynb
+++ b/NRPyPN/PN-MOmega.ipynb
@@ -108,7 +108,7 @@
     "if nrpy_dir_path not in sys.path:\n",
     "    sys.path.append(nrpy_dir_path)\n",
     "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
-    "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "import indexedexpNRPyPN as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "from NRPyPN_shortcuts import div # NRPyPN: shortcuts for e.g., vector operations\n",
     "\n",
     "# Step 1: Construct terms a_2, a_3, and a_4, from\n",
