--- a/NRPyPN/PN-Hamiltonian-Nonspinning.ipynb
+++ b/NRPyPN/PN-Hamiltonian-Nonspinning.ipynb
@@ -100,7 +100,7 @@
     "if nrpy_dir_path not in sys.path:\n",
     "    sys.path.append(nrpy_dir_path)\n",
     "import sympy as sp                   # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
-    "import indexedexp as ixp             # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "import indexedexpNRPyPN as ixp             # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "from NRPyPN_shortcuts import div,dot # NRPyPN: shortcuts for e.g., vector operations\n",
     "\n",
     "def f_H_Newt__H_NS_1PN__H_NS_2PN(m1,m2, PU, nU, q):\n",
