--- a/NRPyPN/PN-Hamiltonian-Spin-Spin.ipynb
+++ b/NRPyPN/PN-Hamiltonian-Spin-Spin.ipynb
@@ -88,7 +88,7 @@
     "nrpy_dir_path = os.path.join(\"..\")\n",
     "if nrpy_dir_path not in sys.path:\n",
     "    sys.path.append(nrpy_dir_path)\n",
-    "import indexedexp as ixp                   # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "import indexedexpNRPyPN as ixp                   # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "from NRPyPN_shortcuts import div,dot,cross # NRPyPN: shortcuts for e.g., vector operations\n",
     "\n",
     "# 2PN spin-spin term, from Eqs. 2.18 and 2.19 of\n",
