NRPyPN: Continue work making NRPyPN independent

--- a/NRPyPN/PN-Hamiltonian-SSS.ipynb
+++ b/NRPyPN/PN-Hamiltonian-SSS.ipynb
@@ -94,9 +94,6 @@
     "# Step 0: Add NRPy's directory to the path\n",
     "# https://stackoverflow.com/questions/16780014/import-file-from-parent-directory\n",
     "import os,sys                    # Standard Python modules for multiplatform OS-level functions\n",
-    "nrpy_dir_path = os.path.join(\"..\")\n",
-    "if nrpy_dir_path not in sys.path:\n",
-    "    sys.path.append(nrpy_dir_path)\n",
     "import indexedexpNRPyPN as ixp                   # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "from NRPyPN_shortcuts import div,dot,cross # NRPyPN: shortcuts for e.g., vector operations\n",
     "\n",
@@ -228,10 +225,7 @@
    ],
    "source": [
     "import os,sys                    # Standard Python modules for multiplatform OS-level functions\n",
-    "nrpy_dir_path = os.path.join(\"..\")\n",
-    "if nrpy_dir_path not in sys.path:\n",
-    "    sys.path.append(nrpy_dir_path)\n",
-    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "import cmdline_helperNRPyPN as cmd    # NRPy+: Multi-platform Python command-line interface\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"PN-Hamiltonian-SSS\",location_of_template_file=os.path.join(\"..\"))"
    ]
   }
