--- a/NRPyPN/PN-p_r.ipynb
+++ b/NRPyPN/PN-p_r.ipynb
@@ -74,9 +74,6 @@
     "# Step 0: Add NRPy's directory to the path\n",
     "# https://stackoverflow.com/questions/16780014/import-file-from-parent-directory\n",
     "import os,sys                    # Standard Python modules for multiplatform OS-level functions\n",
-    "nrpy_dir_path = os.path.join(\"..\")\n",
-    "if nrpy_dir_path not in sys.path:\n",
-    "    sys.path.append(nrpy_dir_path)\n",
     "import sympy as sp                        # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
     "from NRPyPN_shortcuts import Pt,Pr,nU,div # NRPyPN: shortcuts for e.g., vector operations"
    ]
@@ -966,10 +963,7 @@
    ],
    "source": [
     "import os,sys                    # Standard Python modules for multiplatform OS-level functions\n",
-    "nrpy_dir_path = os.path.join(\"..\")\n",
-    "if nrpy_dir_path not in sys.path:\n",
-    "    sys.path.append(nrpy_dir_path)\n",
-    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "import cmdline_helperNRPyPN as cmd    # NRPy+: Multi-platform Python command-line interface\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"PN-p_r\",location_of_template_file=os.path.join(\"..\"))"
    ]
   }
