NRPyPN: Use sp.EulerGamma instead of manually inputting the gamma_EulerMascheroni constant

--- a/NRPyPN/NRPyPN_shortcuts.ipynb
+++ b/NRPyPN/NRPyPN_shortcuts.ipynb
@@ -120,7 +120,7 @@
     "chi2U = ixp.declarerank1('chi2U')\n",
     "\n",
     "# Euler-Mascheroni gamma constant:\n",
-    "gamma_EulerMascheroni = sp.symbols('gamma_EulerMascheroni',real=True)\n",
+    "gamma_EulerMascheroni = sp.EulerGamma\n",
     "\n",
     "# Derived quantities used in Damour et al papers:\n",
     "n12U = ixp.zerorank1()\n",
@@ -256,8 +256,8 @@
     ".subs(S2U[0],nS2U0).subs(S2U[1],nS2U1).subs(S2U[2],nS2U2)\\\n",
     ".subs(chi1U[0],nchi1x).subs(chi1U[1],nchi1y).subs(chi1U[2],nchi1z)\\\n",
     ".subs(chi2U[0],nchi2x).subs(chi2U[1],nchi2y).subs(chi2U[2],nchi2z)\\\n",
-    ".subs(r,nr).subs(q,nr).subs(sp.pi,sp.N(sp.pi)\\\n",
-    ".subs(gamma_EulerMascheroni,0.5772156649015328606065120900824024310421))"
+    ".subs(r,nr).subs(q,nr).subs(sp.pi,sp.N(sp.pi))\\\n",
+    ".subs(gamma_EulerMascheroni,sp.N(sp.EulerGamma))"
    ]
   },
   {
