--- a/NRPyPN/PN-p_r.ipynb
+++ b/NRPyPN/PN-p_r.ipynb
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -532,13 +532,11 @@
     "                          qmassratio=qmassratio, nr=nr,\n",
     "                          nchi1x=nchi1x,nchi1y=nchi1y,nchi1z=nchi1z,\n",
     "                          nchi2x=nchi2x,nchi2y=nchi2y,nchi2z=nchi2z)\n",
-    "    trusted_result = num_eval(trusted.subs(gamma_EulerMascheroni,0.5772156649015328606065120900824024310421),\n",
-    "                              qmassratio=qmassratio, nr=nr,\n",
+    "    trusted_result = num_eval(trusted,qmassratio=qmassratio, nr=nr,\n",
     "                              nchi1x=nchi1x,nchi1y=nchi1y,nchi1z=nchi1z,\n",
     "                              nchi2x=nchi2x,nchi2y=nchi2y,nchi2z=nchi2z,\n",
     "                              nPt=nPt)\n",
-    "    other_result= num_eval(other.subs(gamma_EulerMascheroni,0.5772156649015328606065120900824024310421),\n",
-    "                           qmassratio=qmassratio, nr=nr,\n",
+    "    other_result= num_eval(other,qmassratio=qmassratio, nr=nr,\n",
     "                           nchi1x=nchi1x,nchi1y=nchi1y,nchi1z=nchi1z,\n",
     "                           nchi2x=nchi2x,nchi2y=nchi2y,nchi2z=nchi2z,\n",
     "                           nPt=nPt)\n",
@@ -602,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,14 +626,12 @@
     "                          nchi1x=nchi1x,nchi1y=nchi1y,nchi1z=nchi1z,\n",
     "                          nchi2x=nchi2x,nchi2y=nchi2y,nchi2z=nchi2z)\n",
     "\n",
-    "    p_r_approach1 = num_eval(p_r_fullHam.subs(gamma_EulerMascheroni,0.5772156649015328606065120900824024310421),\n",
-    "                             qmassratio = qmassratio, nr=nr,\n",
+    "    p_r_approach1 = num_eval(p_r_fullHam, qmassratio = qmassratio, nr=nr,\n",
     "                             nchi1x=nchi1x, nchi1y=nchi1y, nchi1z=nchi1z,\n",
     "                             nchi2x=nchi2x, nchi2y=nchi2y, nchi2z=nchi2z,\n",
     "                             nPt=nPt)\n",
     "\n",
-    "    p_r_approach2 = num_eval(p_r.subs(gamma_EulerMascheroni,0.5772156649015328606065120900824024310421),\n",
-    "                             qmassratio = qmassratio, nr=nr,\n",
+    "    p_r_approach2 = num_eval(p_r, qmassratio = qmassratio, nr=nr,\n",
     "                             nchi1x=nchi1x, nchi1y=nchi1y, nchi1z=nchi1z,\n",
     "                             nchi2x=nchi2x, nchi2y=nchi2y, nchi2z=nchi2z,\n",
     "                             nPt=nPt)\n",
@@ -668,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
