--- a/in_progress/Tutorial-GiRaFFE_NRPy-Metric_Face_Values.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Metric_Face_Values.ipynb
@@ -230,6 +230,19 @@
     "                }\n",
     "            }\n",
     "        }\n",
+    "#ifdef WORKAROUND_ENABLED\n",
+    "        for (int i2 = NGHOSTS;i2 < Nxx2+NGHOSTS+1;i2++) {\n",
+    "            for (int i1 = NGHOSTS;i1 < Nxx1+NGHOSTS+1;i1++) {\n",
+    "                for (int i0 = NGHOSTS;i0 < Nxx0+NGHOSTS+1;i0++) {\n",
+    "                    Qm2 = auxevol_gfs[IDX4S(PSI6_TEMPGF,i0-2*kronecker_delta[flux_dirn][0],i1-2*kronecker_delta[flux_dirn][1],i2-2*kronecker_delta[flux_dirn][2])];\n",
+    "                    Qm1 = auxevol_gfs[IDX4S(PSI6_TEMPGF,i0-kronecker_delta[flux_dirn][0],i1-kronecker_delta[flux_dirn][1],i2-kronecker_delta[flux_dirn][2])];\n",
+    "                    Qp0 = auxevol_gfs[IDX4S(PSI6_TEMPGF,i0,i1,i2)];\n",
+    "                    Qp1 = auxevol_gfs[IDX4S(PSI6_TEMPGF,i0+kronecker_delta[flux_dirn][0],i1+kronecker_delta[flux_dirn][1],i2+kronecker_delta[flux_dirn][2])];\n",
+    "                    auxevol_gfs[IDX4S(CFGF,i0,i1,i2)] = COMPUTE_FCVAL(Qm2,Qm1,Qp0,Qp1);\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "#endif /*WORKAROUND_ENABLED*/\n",
     "    }\n",
     "\n",
     "\"\"\",\n",
@@ -318,7 +331,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Notebook output to PDF is only supported on Linux systems, with pdflatex installed.\n"
+      "pdflatex: security risk: running with elevated privileges\n",
+      "pdflatex: security risk: running with elevated privileges\n",
+      "pdflatex: security risk: running with elevated privileges\n",
+      "Created Tutorial-GiRaFFE_NRPy-Metric_Face_Values.tex, and compiled LaTeX\n",
+      "    file to PDF file Tutorial-GiRaFFE_NRPy-Metric_Face_Values.pdf\n"
      ]
     }
    ],
