Tutorial-GiRaFFE_NRPy-Metric_Face_Values: Debugging the new workaround.

--- a/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver_staggered.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy_Main_Driver_staggered.ipynb
@@ -504,21 +504,26 @@
     }
    ],
    "source": [
+    "import sympy as sp                # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
+    "# First calculate the conformal factor psi^4 = detgamma^(1/3)\n",
+    "_gammaUU, gammaDET = ixp.symm_matrix_inverter3x3(gammaDD) # _gammaUU unused.\n",
+    "psi4factor = gri.register_gridfunctions(\"AUXEVOL\",\"psi4factor\")\n",
+    "psi4 = sp.cbrt(gammaDET)\n",
+    "# Rescale gammaDD: gammabarDD = gammaDD/psi4\n",
+    "gammabarDD = ixp.zerorank2(DIM=3)\n",
+    "for i in range(3):\n",
+    "    for j in range(3):\n",
+    "        gammabarDD[i][j] = gammaDD[i][j]/psi4\n",
     "# Generate a kernel to convert to BSSN:\n",
-    "import BSSN.BSSN_in_terms_of_ADM as BitoA\n",
-    "BitoA.gammabarDD_hDD(gammaDD)\n",
-    "BitoA.cf_from_gammaDD(gammaDD)\n",
-    "\n",
     "# We'll convert the metric in place to ensure compatibility with our metric face interpolator\n",
     "values_to_print = [\n",
-    "                   lhrh(lhs=gri.gfaccess(\"in_gfs\",\"gammaDD00\"),rhs=BitoA.gammabarDD[0][0]),\n",
-    "                   lhrh(lhs=gri.gfaccess(\"in_gfs\",\"gammaDD01\"),rhs=BitoA.gammabarDD[0][1]),\n",
-    "                   lhrh(lhs=gri.gfaccess(\"in_gfs\",\"gammaDD02\"),rhs=BitoA.gammabarDD[0][2]),\n",
-    "                   lhrh(lhs=gri.gfaccess(\"in_gfs\",\"gammaDD11\"),rhs=BitoA.gammabarDD[1][1]),\n",
-    "                   lhrh(lhs=gri.gfaccess(\"in_gfs\",\"gammaDD12\"),rhs=BitoA.gammabarDD[1][2]),\n",
-    "                   lhrh(lhs=gri.gfaccess(\"in_gfs\",\"gammaDD12\"),rhs=BitoA.gammabarDD[1][2]),\n",
-    "                   lhrh(lhs=gri.gfaccess(\"in_gfs\",\"gammaDD22\"),rhs=BitoA.gammabarDD[2][2]),\n",
-    "                   lhrh(lhs=gri.gfaccess(\"in_gfs\",\"psi6_temp\"),rhs=BitoA.cf)\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD00\"),rhs=gammabarDD[0][0]),\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD01\"),rhs=gammabarDD[0][1]),\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD02\"),rhs=gammabarDD[0][2]),\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD11\"),rhs=gammabarDD[1][1]),\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD12\"),rhs=gammabarDD[1][2]),\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD22\"),rhs=gammabarDD[2][2]),\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"psi4factor\"),rhs=psi4)\n",
     "                  ]\n",
     "\n",
     "desc = \"Convert ADM metric to BSSN\"\n",
@@ -530,30 +535,25 @@
     "    loopopts =\"AllPoints\",\n",
     "    rel_path_for_Cparams=os.path.join(\"./\"))\n",
     "\n",
-    "alpha_is_here = 10000 # If this doesn't get reset, this should throw an error\n",
-    "for i in range(len(gri.glb_gridfcs_list)):\n",
-    "    if \"alpha\" in gri.glb_gridfcs_list[i].name:\n",
-    "        alpha_is_here = i\n",
-    "        break\n",
-    "gri.glb_gridfcs_list.pop(i)\n",
-    "import BSSN.ADM_in_terms_of_BSSN as AB\n",
-    "\n",
+    "rescaled_gammaDD = ixp.zerorank2(DIM=3)\n",
+    "for i in range(3):\n",
+    "    for j in range(3):\n",
+    "        # Here, gammaDD actually represents gammabarDD, but recall that we converted in place.\n",
+    "        rescaled_gammaDD[i][j] = gammaDD[i][j]*psi4factor\n",
     "# We'll convert the metric in place to ensure compatibility with our metric face interpolator\n",
-    "AB.ADM_in_terms_of_BSSN()\n",
     "values_to_print = [\n",
-    "                   lhrh(lhs=gri.gfaccess(\"in_gfs\",\"gammaDD00\"),rhs=AB.gammaDD[0][0]),\n",
-    "                   lhrh(lhs=gri.gfaccess(\"in_gfs\",\"gammaDD01\"),rhs=AB.gammaDD[0][1]),\n",
-    "                   lhrh(lhs=gri.gfaccess(\"in_gfs\",\"gammaDD02\"),rhs=AB.gammaDD[0][2]),\n",
-    "                   lhrh(lhs=gri.gfaccess(\"in_gfs\",\"gammaDD11\"),rhs=AB.gammaDD[1][1]),\n",
-    "                   lhrh(lhs=gri.gfaccess(\"in_gfs\",\"gammaDD12\"),rhs=AB.gammaDD[1][2]),\n",
-    "                   lhrh(lhs=gri.gfaccess(\"in_gfs\",\"gammaDD12\"),rhs=AB.gammaDD[1][2]),\n",
-    "                   lhrh(lhs=gri.gfaccess(\"in_gfs\",\"gammaDD22\"),rhs=AB.gammaDD[2][2])\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD00\"),rhs=rescaled_gammaDD[0][0]),\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD01\"),rhs=rescaled_gammaDD[0][1]),\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD02\"),rhs=rescaled_gammaDD[0][2]),\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD11\"),rhs=rescaled_gammaDD[1][1]),\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD12\"),rhs=rescaled_gammaDD[1][2]),\n",
+    "                   lhrh(lhs=gri.gfaccess(\"auxevol_gfs\",\"gammaDD22\"),rhs=rescaled_gammaDD[2][2])\n",
     "                  ]\n",
     "\n",
     "C_code_kernel = fin.FD_outputC(\"returnstring\",values_to_print,params=outCparams)\\\n",
-    "                   .replace(\"IDX4\",\"IDX4S\").replace(\"HDD\",\"GAMMADD\").replace(\"in_gfs\",\"auxevol_gfs\")\\\n",
-    "                   .replace(\"CFGF\",\"PSI6_TEMPGF\")\n",
-    "C_face_kernel = C_code_kernel.replace(\"GAMMA\",\"GAMMA_FACE\").replace(\"PSI6_TEMPGF\",\"CFGF\")\n",
+    "                   .replace(\"IDX4\",\"IDX4S\")\n",
+    "# .replace(\"in_gfs\",\"auxevol_gfs\")\n",
+    "C_face_kernel = C_code_kernel.replace(\"GAMMA\",\"GAMMA_FACE\").replace(\"PSI4FACTORGF\",\"PSI6_TEMPGF\")\n",
     "\n",
     "desc = \"Convert BSSN metric to ADM\"\n",
     "name = \"Workaround_BSSN_to_ADM\"\n",
